k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: archiver
  template:
    metadata:
      labels:
        app: archiver
    spec:
      containers:
        - name: archiver
          image: abvc/archiver:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
