k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: archiver
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: archiver
