k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archiver
spec:
  rules:
    - host: archiver.local
      http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: archiver
                 port:
                   number: 8080
